Completed nav-bar

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid hide1">
             <div class="container">
                 <div class="d-flex">
-                    <div class="p-10 w-15  text-center">
-                        <div class="box mt-10 mb-5">
+                    <div class="p-10 w-15 lg-1 p-0 text-center">
+                        <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-location-dot fluid3 mr-5"></i>  123 Street, CA, USA
                             </a>
                         </div>
                     </div>
-                    <div class="p-10 w-15 text-center">
-                        <div class="box mt-10 mb-5">
+                    <div class="p-10 p-0 w-15 lg-1 text-center">
+                        <div class="box mt-10 pb-10 mb-5 mb-0 mt-0">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-phone fluid3 mr-5"></i>
                                 +0123456789
                             </a>
                         </div>
                     </div>
-                    <div class="p-10 w-15  text-center">
-                        <div class="box mt-10 mb-5">
+                    <div class="p-10 p-0 w-15 lg-1  text-center">
+                        <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-envelope fluid3 mr-5"></i>
                                 Example@gmail.com
@@ -47,8 +47,8 @@
                             <input class="w-1 p-10 border-radius" placeholder="Search Here" type="text">
                         </div>
                     </div>
-                    <div class="p-10 w-15 text-center">
-                        <div class="box boxline mt-10">
+                    <div class="p-10 p-0 w-15 lg-1 text-center">
+                        <div class="box boxline mt-10 mb-0 mt-0 pb-10">
                             
                             <a class="fluid2 font1" href="">
                                 <i class="fa-brands fa-facebook-f mr-15 fluid3"></i>
@@ -65,15 +65,17 @@
 
         <div class="container-fluid1">
             <div class="container">
-                <div class="d-flex border">
-                    <div class="w-30 p-10 start md-90">
+                <div class="d-flex">
+                    <div class="w-30 p-10 start md-90 sm-75">
                         <div class="w-1 h-50">
-                            <div class="box border">
-                                <h1 class="fluid1 font3">
-                                    Pest
-                                    <span class="fluid4">Kit</span>
-                                    <i class="fa-solid fa-spider"></i>
-                                </h1>
+                            <div class="box">
+                                <a href="">
+                                    <h1 class="fluid1 font3 f1">
+                                        Pest
+                                        <span class="fluid4">Kit</span>
+                                        <i class="fa-solid fa-spider"></i>
+                                    </h1>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +112,7 @@
                         </div>
                     </div>
 
-                    <button class="border-radius p-1 wp-4 hide0 h-50 mt-12">
+                    <button class="border-radius p-1 wp-4 hide0 h-50 mt-7">
                         <i class="fa-solid fa-bars"></i>
                     </button>
                 </div>
