Completed some sections

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="p-10 p-0 w-15 lg-1  text-center">
+                    <div class="p-10 p-0 w-15 lg-1 text-center">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
                                 <i class="fa-solid fa-envelope fluid3 mr-5"></i>
@@ -135,28 +135,58 @@
 <!-- --------------------find pets--------------------------- -->
 
     <section>
-        <div class="container mt-30">
+        <div class="container mt-30 background1">
             <div class="d-flex">
-                <div class="w-1 h-50 p-10">
-                    <div class="box"></div>
+                <div class="w-1 p-10">
+                    <div class="box text-center mt-40">
+                        <h1 class="font3 fluid3">
+                            Find Your Pest Control Services
+                        </h1>
+                    </div>
                 </div>
             </div>
 
-            <div class="d-flex">
+            <div class="d-flex mt-30">
                 <div class="w-5 h-1 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <select class="w-1 h-100 border-radius10 font4" name="" id="">
+                            <option value="Types of services">
+                                Types Of Services
+                            </option>
+                            <option value="Pest Control-2">
+                                Pest Control-2
+                            </option>
+                            <option value="Pest Control-2">
+                                Pest Control-3
+                            </option>
+                            <option value="Pest Control-2">
+                                Pest Control-4
+                            </option>
+                            <option value="Pest Control-2">
+                                Pest Control-5
+                            </option>
+                        </select>
+                    </div>
                 </div>
                 <div class="w-5 h-1 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <input class="w-1 h-100 border-radius10 font4 td" type="text" placeholder="Name">
+                    </div>
                 </div>
                 <div class="w-5 h-1 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <input class="w-1 h-100 border-radius10 font4 td" type="number" placeholder="Phone">
+                    </div>
                 </div>
                 <div class="w-5 h-1 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <input class="w-1 h-100 border-radius10 font4 td" type="email" placeholder="E-Mail">
+                    </div>
                 </div>
                 <div class="w-5 h-1 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <input class="w-1 h-100 border-radius10 font4 td" type="button" value="GET STARTED">
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,18 +197,32 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-2 h-5 p-20">
-                    <div class="box"></div>
+                <div class="w-2 h-7 p-20">
+                    <div class="box relative">
+                        <img class="absolute" width="100%" height="100%" src="Images/About/utensils.jpg" alt="">
+                    </div>
                 </div>
                 <div class="w-2 h- p-20 d-flex1">
                     <div class="w-70 h-1 p-5">
-                        <div class="box"></div>
+                        <div class="box">
+                            <h5>
+                                About PestKit
+                            </h5>
+                        </div>
                     </div>
                     <div class="w-70 h-1 p-5">
-                        <div class="box"></div>
+                        <div class="box">
+                            <h1>
+                                World Best Pest Control Services Since 2008
+                            </h1>
+                        </div>
                     </div>
                     <div class="w-70 h-1 p-5">
-                        <div class="box"></div>
+                        <div class="box">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiu smod tempor incididunt ut labore dolore magna aliqua.Quis ipsum suspen disse ultrices gravida Risus commodo viverra maecenas accumsan lacus vel facilisis.
+                            </p>
+                        </div>
                     </div>
                     <div class="w-1 h-1 p-5 d-flex text-center">
                         <div class="w-4 p-5">
