--- a/index.html
+++ b/index.html
@@ -197,9 +197,11 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-2 h-7 p-20">
-                    <div class="box relative">
-                        <img class="absolute" width="100%" height="100%" src="Images/About/utensils.jpg" alt="">
+                <div class="w-2 h-7 p-30 border-radius box1 relative">
+                    <div class="box border-radius">
+                        <div class="box2"></div>
+                        <div class="box3"></div>
+                        <img class="border-radius relative" width="100%" height="100%" src="Images/About/utensils.jpg" alt="">
                     </div>
                 </div>
                 <div class="w-2 h- p-20 d-flex1">
@@ -224,22 +226,37 @@
                             </p>
                         </div>
                     </div>
-                    <div class="w-1 h-1 p-5 d-flex text-center">
-                        <div class="w-4 p-5">
-                            <div class="box"></div>
+                    <div class="w-1 p- d-flex text-center border jc">
+                        <div class="p-10 w-4 pl">
+                            <div class="box bg2 h-112 middle">
+                                <i class="font5 
+                                fluid1
+                                fa-solid fa-city"></i>
+                            </div>
                         </div>
-                        <div class="w-4 p-5">
-                            <div class="box"></div>
+                        <div class="p-10 w-4">
+                            <div class="box bg2 h-112 middle">
+                                <i class="font5 
+                                fluid1 fa-solid fa-school"></i>
+                            </div>
                         </div>
-                        <div class="w-4 p-5">
-                            <div class="box"></div>
+                        <div class="p-10 w-4">
+                            <div class="box bg2 h-112 middle">
+                                <i class="font5 
+                                fluid1 fa-solid fa-warehouse"></i>
+                            </div>
                         </div>
-                        <div class="w-4 p-5">
-                            <div class="box"></div>
+                        <div class="p-10 w-4">
+                            <div class="box bg2 h-112 middle">
+                                <i class="font5 
+                                fluid1 fa-solid fa-hospital"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="w-3 h-1 p-5">
-                        <div class="box"></div>
+                        <div class="box">
+                            Find Services
+                        </div>
                     </div>
                 </div>
             </div>
