--- a/index.html
+++ b/index.html
@@ -422,8 +422,12 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-5 h-50 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box">
+                        <button class="font8 open bg3 fluid3 p-3 border-radius50 border0 mt-24 lh5 fw-5">
+                            MORE SERVICES
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -434,30 +438,97 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-5 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box mb-5">
+                        <h5 class="nunito font6 fluid3 border-color border-line border p-2 fw-7 lh border-radius50">
+                            Our Project
+                        </h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex">
+                <div class="p-10">
+                    <div class="box mb-5">
+                        <h1 class="font7 nunito fluid3 lh fw-8">
+                            Our recently completed projects
+                        </h1>
+                    </div>
                 </div>
             </div>
 
             <div class="d-flex">
                 <div class="w-1 p-5 d-flex">
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/1.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                            Whole Home <br/>
+                            Santizing
+                        </a>
                     </div>
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/2.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                            Education Center <br/>
+                            Cleaning
+                        </a>
                     </div>
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/3.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                             Wea
+                        </a>
                     </div>
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/4.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                            Whole Home <br/>
+                            Santizing
+                        </a>
                     </div>
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/5.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                            Whole Home <br/>
+                            Santizing
+                        </a>
                     </div>
-                    <div class="w-3 h-3 p-10">
-                        <div class="box"></div>
+                    <div class="w-3 h-3 p-10 animation relative">
+                        <div class="box box5 relative overflow">
+                            <div class="box6"></div>
+                            <div class="box7"></div>
+                            <img width="100%" height="100%" class="relative p-20" src="Images/project/6.jpg" alt="">
+                        </div>
+
+                        <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
+                            Whole Home <br/>
+                            Santizing
+                        </a>
                     </div>
                 </div>
             </div>
@@ -628,4 +699,3 @@
     </footer>
 </body>
 
-</html>
