--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section>
         <div class="container mt-30 background1">
             <div class="d-flex">
-                <div class="w-1 p-10">
+                <div class="p-10">
                     <div class="box text-center mt-40">
                         <h1 class="font3 fluid3">
                             Find Your Pest Control Services
@@ -152,10 +152,10 @@
                 </div>
             </div>
 
-            <div class="d-flex mt-30">
-                <div class="w-5 h-1 p-20">
+            <div class="d-flex mt-30 middle">
+                <div class="w-5 h-1 p-20 md-2 lg-1">
                     <div class="box">
-                        <select class="w-1 h-100 border-radius10 font4" name="" id="">
+                        <select class="w-1 border-radius10 font4 border0" name="" id="">
                             <option value="Types of services">
                                 Types Of Services
                             </option>
@@ -174,24 +174,26 @@
                         </select>
                     </div>
                 </div>
-                <div class="w-5 h-1 p-20">
+                <div class="w-5 h-1 p-20 md-2 lg-1">
                     <div class="box">
-                        <input class="w-1 h-100 border-radius10 font4 td" type="text" placeholder="Name">
+                        <input class="w-1 border-radius10 font4 td border0" type="text" placeholder="Name">
                     </div>
                 </div>
-                <div class="w-5 h-1 p-20">
+                <div class="w-5 h-1 p-20 md-2 lg-1">
                     <div class="box">
-                        <input class="w-1 h-100 border-radius10 font4 td" type="number" placeholder="Phone">
+                        <input class="w-1 border-radius10 font4 td border0" type="number" placeholder="Phone">
                     </div>
                 </div>
-                <div class="w-5 h-1 p-20">
+                <div class="w-5 h-1 p-20 md-2 lg-1">
                     <div class="box">
-                        <input class="w-1 h-100 border-radius10 font4 td" type="email" placeholder="E-Mail">
+                        <input class="w-1 border-radius10 font4 td border0" type="email" placeholder="E-Mail">
                     </div>
                 </div>
-                <div class="w-5 h-1 p-20">
+                <div class="w-5 h-1 p-20 md-1">
                     <div class="box">
-                        <input class="w-1 h-100 border-radius10 font4 td" type="button" value="GET STARTED">
+                         <button class="bg3 p-15 font1 fluid3 border-radius10 border0 md-1 lg-1">
+                            GET STARTED
+                         </button>
                     </div>
                 </div>
             </div>
@@ -203,7 +205,7 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-2 h-7 p-30 border-radius box1 relative overflow">
+                <div class="w-2 h-7 p-30 border-radius box1 relative overflow md-1">
 
                     <div class="box border-radius">
                         <div class="box2"></div>
@@ -218,7 +220,8 @@
                             alt="">
                     </div>
                 </div>
-                <div class="w-2 p-20 d-flex1">
+
+                <div class="w-2 p-20 d-flex1 md-1">
                     <div class="w-70 p-5">
                         <div class="box mb-5">
                             <h5
@@ -467,7 +470,7 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                            Whole Home <br/>
+                            Whole Home <br />
                             Santizing
                         </a>
                     </div>
@@ -479,7 +482,7 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                            Education Center <br/>
+                            Education Center <br />
                             Cleaning
                         </a>
                     </div>
@@ -491,7 +494,8 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                             Wea
+                            Warehouse <br />
+                            Cleaning
                         </a>
                     </div>
                     <div class="w-3 h-3 p-10 animation relative">
@@ -502,8 +506,8 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                            Whole Home <br/>
-                            Santizing
+                            Hospital <br />
+                            Cleaning
                         </a>
                     </div>
                     <div class="w-3 h-3 p-10 animation relative">
@@ -514,8 +518,8 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                            Whole Home <br/>
-                            Santizing
+                            Factory <br />
+                            Cleaning
                         </a>
                     </div>
                     <div class="w-3 h-3 p-10 animation relative">
@@ -526,8 +530,8 @@
                         </div>
 
                         <a class="relative text-center fw-7 lh5 open bg3 fluid3 font10 p-20 border-radius10" href="">
-                            Whole Home <br/>
-                            Santizing
+                            Furniture <br />
+                            Sanatizing
                         </a>
                     </div>
                 </div>
@@ -540,9 +544,23 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <w-10 class="w-5 h-1 p-10">
-                    <div class="box"></div>
-                </w-10>
+                <div class="p-10">
+                    <div class="box mb-5">
+                        <h5 class="font6 nunito fluid3 border-color border-line border border-radius50 fw-7 lh p-2">
+                            Our Blog
+                        </h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex">
+                <div class="p-10">
+                    <div class="box mb-5">
+                        <h1 class="fluid3 font7 nunito fw-8 lh">
+                            Latest Blog & News
+                        </h1>
+                    </div>
+                </div>
             </div>
 
             <div class="d-flex">
@@ -562,10 +580,28 @@
     <!-- --------------------------------picture----------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container1 mt-40">
             <div class="d-flex">
-                <div class="w-1 h-5 p-10">
-                    <div class="box"></div>
+                <div class="h-6 w-1">
+                    <div class="box relative ime">
+                        <div class="container0 d-flex">
+                            <div class="w-2 middle1">
+                                <img width="70%" class="border-radius50per" src="Images/pic/action.jpg" alt="">
+                            </div>
+                            <div class="w-2 middle">
+                                <h1 class="font11 nunito mb-5 fluid4 fw-7 lh pb-24 fw-7 lh">
+                                    Sign Up To Our Newsletter To Get The Latest Offers
+                                </h1>
+                                <div>
+                                    <input class="border-radius50 rounded-end1 background1 p-3 w-350" type="search"
+                                        placeholder="Enter Your E-Mail Address">
+                                    <button class="font8 bg3 fluid3 open p-3 border-radius50 rounded-end2">
+                                        SUBSCRIBE
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -576,26 +612,179 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-4 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box">
+                        <h5 class="nunito font6 fluid3 p-2 border-color border-line border border-radius50">
+                            Our Pricing
+                        </h5>
+                    </div>
                 </div>
             </div>
 
             <div class="d-flex">
-                <div class="w-70 h-1 p-10">
-                    <div class="box"></div>
-                </div>
-            </div>
-
-            <div cl">
-                <div class="box">
-                    </di">
-                    <div class="box">
-                        </di">
-                        <div class="box"></div>
+                <div class="p-10">
+                    <div class="box text-center">
+                        <h1 class="font7 nunito fluid3 fw-8 lh">
+                            Affordable Pricing Plan <br />
+                            For Pest Control <br />
+                            Services
+                        </h1>
                     </div>
                 </div>
             </div>
+
+            <div class="d-flex">
+                <div class="w-3 p-10">
+                    <div class="box p-20 box0">
+                        <div class="text-center border-bottom">
+                            <h2 class="font11 fluid3 nunito bg3 p-4">
+                                Basic
+                            </h2>
+                        </div>
+
+                        <div class="text-center background1">
+                            <div class="bg3 p-6 border-radius1">
+                                <h1 class="font11 nunito fluid3 display-inline">$60</h1>
+                                <span class="font6 nunito fluid2">/mo</span>
+                                <p class="fluid2 font8 open">Basic Pest Control</p>
+                            </div>
+
+                        </div>
+
+                        <div class="p-20 background1 text-center">
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Household pests Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Rodent Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Re-Service at No-Charge
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Termite Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Mosquito Reduction
+                            </p>
+
+                            <button class="bg3 fluid3 font8 open p-3 mb-15 lh5 border-radius50 border0">
+                                GET STARTED
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-3 p-10">
+                    <div class="box p-20 box0">
+                        <div class="text-center border-bottom1 bg2">
+                            <h2 class="font11 nunito fluid1 p-4">
+                                Standerd
+                            </h2>
+                        </div>
+
+                        <div class="text-center background1">
+                            <div class="bg2 p-6 border-radius1">
+                                <h1 class="font11 nunito fluid1 display-inline">$80</h1>
+                                <span class="font6 nunito fluid1">/mo</span>
+                                <p class="fluid4 font8 open">Standerd Pest Control</p>
+                            </div>
+
+                        </div>
+
+                        <div class="p-20 background1 text-center">
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Household pests Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Rodent Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Re-Service at No-Charge
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Termite Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Mosquito Reduction
+                            </p>
+
+                            <button class="bg2 fluid1 font8 open p-3 mb-15 lh5 border-radius50 border0">
+                                GET STARTED
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w-3 p-10">
+                    <div class="box p-20 box0">
+                        <div class="text-center border-bottom">
+                            <h2 class="font11 fluid3 nunito bg3 p-4">
+                                Premium
+                            </h2>
+                        </div>
+
+                        <div class="text-center background1">
+                            <div class="bg3 p-6 border-radius1">
+                                <h1 class="font11 nunito fluid3 display-inline">$120</h1>
+                                <span class="font6 nunito fluid2">/mo</span>
+                                <p class="fluid2 font8 open">Premium Pest Control</p>
+                            </div>
+
+                        </div>
+
+                        <div class="p-20 background1 text-center">
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Household pests Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Rodent Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-check fluid5 fw-9"></i>
+                                Re-Service at No-Charge
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Termite Control
+                            </p>
+
+                            <p class="text-center fluid2 font6 open fw-4 lh5 mb-15">
+                                <i class="fa-solid fa-x fluid6 fw-9"></i>
+                                Mosquito Reduction
+                            </p>
+
+                            <button class="bg3 fluid3 font8 open p-3 mb-15 lh5 border-radius50 border0">
+                                GET STARTED
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- ----------------------------our team---------------------- -->
@@ -603,20 +792,30 @@
     <section>
         <div class="container mt-40">
             <div class="d-flex">
-                <div class="w-5 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box">
+                        <h5 class="nunito font6 fluid3 p-2 border-color border-line border border-radius50 fw-7 lh">
+                            Our Team
+                        </h5>
+                    </div>
                 </div>
             </div>
 
             <div class="d-flex">
-                <div class="w-70 h-1 p-10">
-                    <div class="box"></div>
+                <div class="p-10">
+                    <div class="box">
+                        <h1 class="font7 nunito fluid3 fw-8 lh">
+                            Our Team Members
+                        </h1>
+                    </div>
                 </div>
             </div>
 
             <div class="d-flex">
                 <div class="w-4 h-3 p-20">
-                    <div class="box"></div>
+                    <div class="box">
+                        <img class="border-radius10" width="100%" height="100%" src="Images/team/team-1..jpg" alt="">
+                    </div>
                 </div>
                 <div class="w-4 h-3 p-20">
                     <div class="box"></div>
@@ -698,4 +897,3 @@
                 </div>
     </footer>
 </body>
-
