--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div class="container-fluid hide1">
-            <div class="container">
+            <div class="container p-7">
                 <div class="d-flex">
                     <div class="p-10 w-15 lg-1 p-0 text-center">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
@@ -70,7 +70,7 @@
 
 
         <div class="container-fluid1">
-            <div class="container">
+            <div class="container p-7">
                 <div class="d-flex">
                     <div class="w-30 p-10 start md-90 sm-75">
                         <div class="w-1 h-50">
@@ -129,7 +129,7 @@
 
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d flex">
                 <div class="w-1 h-5 p-10">
                     <div class="box"></div>
@@ -141,7 +141,7 @@
     <!-- --------------------find pets--------------------------- -->
 
     <section>
-        <div class="container mt-30 background1">
+        <div class="container mt-30 background1 p-7">
             <div class="d-flex">
                 <div class="p-10">
                     <div class="box text-center mt-40">
@@ -191,9 +191,9 @@
                 </div>
                 <div class="w-5 h-1 p-20 md-1">
                     <div class="box">
-                         <button class="bg3 p-15 font1 fluid3 border-radius10 border0 md-1 lg-1">
+                        <button class="bg3 p-15 font1 fluid3 border-radius10 border0 md-1 lg-1">
                             GET STARTED
-                         </button>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
     <!-- ------------------------about pestkit-------------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 sm-1 p-7">
             <div class="d-flex">
                 <div class="w-2 h-7 p-30 border-radius box1 relative overflow md-1">
 
@@ -222,7 +222,7 @@
                 </div>
 
                 <div class="w-2 p-20 d-flex1 md-1">
-                    <div class="w-70 p-5">
+                    <div class="w-1 p-5">
                         <div class="box mb-5">
                             <h5
                                 class="fluid3 p-2 nunito font6 lh border-line border-color border display-inline border-radius fw-7">
@@ -230,16 +230,17 @@
                             </h5>
                         </div>
                     </div>
-                    <div class="w-70 p-5">
+                    <div class="w-1 p-5">
                         <div class="box mb-5">
-                            <h1 class="fluid3 font7 nunito fw-8 lh">
-                                World Best Pest Control Services Since 2008
+                            <h1 class="fluid3 font7 nunito fw-8 lh ">
+                                World Best Pest <br />
+                                Control Services Since 2008
                             </h1>
                         </div>
                     </div>
-                    <div class="w-70 p-5">
+                    <div class="w-1 p-5">
                         <div class="box">
-                            <p class="fluid2 font6 open lh5 fw-4 text-justify">
+                            <p class="fluid2 font6 open lh5 fw-4 text-justify text-justify">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiu smod tempor incididunt
                                 ut labore dolore magna aliqua.Quis ipsum suspen disse ultrices gravida Risus commodo
                                 viverra maecenas accumsan lacus vel facilisis.
@@ -247,7 +248,7 @@
                         </div>
                     </div>
                     <div class="w-1 p- d-flex text-center jc">
-                        <div class="p-10 w-4 pl">
+                        <div class="p-10 w-4 pl xs-2">
                             <div class="box bg2 h-112 middle mb-5">
                                 <i class="font5 
                                 fluid1
@@ -262,7 +263,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div class="p-10 w-4">
+                        <div class="p-10 w-4 xs-2">
                             <div class="box bg2 h-112 middle mb-5">
                                 <i class="font5 
                                 fluid1 fa-solid fa-school"></i>
@@ -276,7 +277,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div class="p-10 w-4">
+                        <div class="p-10 w-4 xs-2">
                             <div class="box bg2 h-112 middle mb-5">
                                 <i class="font5 
                                 fluid1 fa-solid fa-warehouse"></i>
@@ -290,7 +291,7 @@
                                 </h5>
                             </div>
                         </div>
-                        <div class="p-10 w-4">
+                        <div class="p-10 w-4 xs-2">
                             <div class="box bg2 h-112 middle mb-5">
                                 <i class="font5 
                                 fluid1 fa-solid fa-hospital"></i>
@@ -305,7 +306,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-3 p-5">
+                    <div class="w-3 p-5 xs-1">
                         <div class="box text-center">
                             <button class="fluid3 font8 open p-3 bg3 border-radius50 border0">
                                 FIND SERVICES
@@ -320,7 +321,7 @@
     <!-- --------------------------our service---------------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="mb-5">
                     <div class="box text-center">
@@ -342,7 +343,7 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-4 h-4 p-20">
+                <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
                             <div class="services fluid1 font3 mb-15">
@@ -362,7 +363,7 @@
 
                     </div>
                 </div>
-                <div class="w-4 h-4 p-20">
+                <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
                             <div class="services fluid1 font3 mb-15">
@@ -382,7 +383,7 @@
 
                     </div>
                 </div>
-                <div class="w-4 h-4 p-20">
+                <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
                             <div class="services fluid1 font3 mb-15">
@@ -402,7 +403,7 @@
 
                     </div>
                 </div>
-                <div class="w-4 h-4 p-20">
+                <div class="w-4 h-4 p-20 md-2 lg-1">
                     <div class="box background1 p-30 text-center">
                         <div class="middle d-flex">
                             <div class="services fluid1 font3 mb-15">
@@ -439,7 +440,7 @@
     <!-- -------------------------our project--------------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="p-10">
                     <div class="box mb-5">
@@ -452,7 +453,7 @@
 
             <div class="d-flex">
                 <div class="p-10">
-                    <div class="box mb-5">
+                    <div class="box mb-5 text-center">
                         <h1 class="font7 nunito fluid3 lh fw-8">
                             Our recently completed projects
                         </h1>
@@ -461,8 +462,8 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-1 p-5 d-flex">
-                    <div class="w-3 h-3 p-10 animation relative">
+                <div class="w-1 p-30 d-flex">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -474,7 +475,7 @@
                             Santizing
                         </a>
                     </div>
-                    <div class="w-3 h-3 p-10 animation relative">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -486,7 +487,7 @@
                             Cleaning
                         </a>
                     </div>
-                    <div class="w-3 h-3 p-10 animation relative">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -498,7 +499,7 @@
                             Cleaning
                         </a>
                     </div>
-                    <div class="w-3 h-3 p-10 animation relative">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -510,7 +511,7 @@
                             Cleaning
                         </a>
                     </div>
-                    <div class="w-3 h-3 p-10 animation relative">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -522,7 +523,7 @@
                             Cleaning
                         </a>
                     </div>
-                    <div class="w-3 h-3 p-10 animation relative">
+                    <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
                             <div class="box7"></div>
@@ -542,7 +543,7 @@
     <!-- -----------------------------our blog-------------------     -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="p-10">
                     <div class="box mb-5">
@@ -580,24 +581,26 @@
     <!-- --------------------------------picture----------------- -->
 
     <section>
-        <div class="container1 mt-40">
+        <div class="container1 mt-40 p-7">
             <div class="d-flex">
-                <div class="h-6 w-1">
-                    <div class="box relative ime">
+                <div class="h-8 w-1">
+                    <div class="box relative ime xs-1">
                         <div class="container0 d-flex">
-                            <div class="w-2 middle1">
-                                <img width="70%" class="border-radius50per" src="Images/pic/action.jpg" alt="">
+                            <div class="w-2 middle1 text-center md-1">
+                                <img width="80%" class="border-radius50per p" src="Images/pic/action.jpg" alt="">
                             </div>
-                            <div class="w-2 middle">
-                                <h1 class="font11 nunito mb-5 fluid4 fw-7 lh pb-24 fw-7 lh">
-                                    Sign Up To Our Newsletter To Get The Latest Offers
-                                </h1>
-                                <div>
-                                    <input class="border-radius50 rounded-end1 background1 p-3 w-350" type="search"
-                                        placeholder="Enter Your E-Mail Address">
-                                    <button class="font8 bg3 fluid3 open p-3 border-radius50 rounded-end2">
-                                        SUBSCRIBE
-                                    </button>
+                            <div class="w-2 text-center md-1">
+                                <div class="w-70 middle d-flex1">
+                                    <h1 class="font11 nunito mb-5 fluid4 fw-7 lh pb-24 fw-7 lh">
+                                        Sign Up To Our Newsletter To Get The Latest Offers
+                                    </h1>
+                                    <div class="d-flex">
+                                        <input class="border-radius50 rounded-end1 background1 p-3 w-350" type="search"
+                                            placeholder="Enter Your E-Mail Address">
+                                        <button class="font8 bg3 fluid3 open p-3 border-radius50 rounded-end2">
+                                            SUBSCRIBE
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -610,7 +613,7 @@
     <!-- --------------------------our pricing---------------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="p-10">
                     <div class="box">
@@ -634,7 +637,7 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-3 p-10">
+                <div class="w-3 p-10 md-2 lg-1">
                     <div class="box p-20 box0">
                         <div class="text-center border-bottom">
                             <h2 class="font11 fluid3 nunito bg3 p-4">
@@ -684,7 +687,7 @@
                     </div>
                 </div>
 
-                <div class="w-3 p-10">
+                <div class="w-3 p-10 md-2 lg-1">
                     <div class="box p-20 box0">
                         <div class="text-center border-bottom1 bg2">
                             <h2 class="font11 nunito fluid1 p-4">
@@ -734,7 +737,7 @@
                     </div>
                 </div>
 
-                <div class="w-3 p-10">
+                <div class="w-3 p-10 md-2 lg-1">
                     <div class="box p-20 box0">
                         <div class="text-center border-bottom">
                             <h2 class="font11 fluid3 nunito bg3 p-4">
@@ -790,7 +793,7 @@
     <!-- ----------------------------our team---------------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="p-10">
                     <div class="box">
@@ -833,7 +836,7 @@
     <!-- ----------------------------testimonial---------------- -->
 
     <section>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <div class="w-5 h-1 p-10">
                     <div class="box"></div>
@@ -863,7 +866,7 @@
     <!-- --------------------------------footer------------------ -->
 
     <footer>
-        <div class="container mt-40">
+        <div class="container mt-40 p-7">
             <div class="d-flex">
                 <di">
                     <div class="box"></div>
@@ -882,7 +885,7 @@
 
 
 
-                <div class="container">
+                <div class="container p-7">
                     <div class="d-flex">
                         <div class="w-3 h-2 p-20">
                             <div class="box"></div>
