--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="p-10 p-0 w-15 lg-1 text-center">
                         <div class="box mt-10 mb-5 mb-0 mt-0 pb-10">
                             <a class="fluid2 font1" href="">
-                                <i class="fa-solid fa-envelope fluid3 mr-5"></i>
+                                <i class="fa-solid fa-envelope fluid3 "></i>
                                 Example@gmail.com
                             </a>
                         </div>
@@ -205,7 +205,7 @@
     <section>
         <div class="container mt-40 sm-1 p-7">
             <div class="d-flex">
-                <div class="w-2 h-7 p-30 border-radius box1 relative overflow md-1">
+                <div class="w-2 h-7 p-20 border-radius box1 relative overflow md-1">
 
                     <div class="box border-radius">
                         <div class="box2"></div>
@@ -427,10 +427,13 @@
 
             <div class="d-flex">
                 <div class="p-10">
-                    <div class="box">
-                        <button class="font8 open bg3 fluid3 p-3 border-radius50 border0 mt-24 lh5 fw-5">
+                    <div class="box relative overflow">
+                        <button class="font8 open bg2 fluid1 p-3 border-radius50 border0 mt-24 lh5 fw-5">
                             MORE SERVICES
                         </button>
+                        <div class="bg3 fluid3 font8 open p-3 border-radius50 border0 lh5 fw-5 box11 mt-24">
+                            MORE SERVICES
+                        </div>
                     </div>
                 </div>
             </div>
@@ -462,7 +465,7 @@
             </div>
 
             <div class="d-flex">
-                <div class="w-1 p-30 d-flex">
+                <div class="w-1 p-10 d-flex">
                     <div class="w-3 h-3 p-10 animation relative md-2 lg-1">
                         <div class="box box5 relative overflow">
                             <div class="box6"></div>
@@ -590,7 +593,7 @@
                                 <img width="80%" class="border-radius50per p" src="Images/pic/action.jpg" alt="">
                             </div>
                             <div class="w-2 text-center md-1">
-                                <div class="w-70 middle d-flex1">
+                                <div class="middle d-flex1">
                                     <h1 class="font11 nunito mb-5 fluid4 fw-7 lh pb-24 fw-7 lh">
                                         Sign Up To Our Newsletter To Get The Latest Offers
                                     </h1>
